fixing overflow

--- a/src/Cinemax/CinemaxBundle/Resources/public/css/bin.css
+++ b/src/Cinemax/CinemaxBundle/Resources/public/css/bin.css
@@ -1,6 +1,9 @@
 .popup ul
 {
     padding: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .popup_disc_image
 {
